transformers/v4.13.0/en/model_doc/unispeech_sat.mdx
---
local: unispeechsat
sections:
- local: overview
  title: Overview
- local: transformers.UniSpeechSatConfig
  title: UniSpeechSatConfig
- local: transformers.models.unispeech_sat.modeling_unispeech_sat.UniSpeechSatBaseModelOutput
  title: UniSpeechSat specific outputs
- local: transformers.UniSpeechSatModel
  title: UniSpeechSatModel
- local: transformers.UniSpeechSatForCTC
  title: UniSpeechSatForCTC
- local: transformers.UniSpeechSatForSequenceClassification
  title: UniSpeechSatForSequenceClassification
- local: transformers.UniSpeechSatForPreTraining
  title: UniSpeechSatForPreTraining
title: UniSpeech-SAT
---
<script lang="ts">
import Tip from "$lib/Tip.svelte";
import Youtube from "$lib/Youtube.svelte";
import Docstring from "$lib/Docstring.svelte";
import CodeBlock from "$lib/CodeBlock.svelte";
import CodeBlockFw from "$lib/CodeBlockFw.svelte";
import ColabDropdown from "$lib/ColabDropdown.svelte";
import IconCopyLink from "$lib/IconCopyLink.svelte";
export let fw: "pt" | "tf"
</script>
<svelte:head>
  <meta name="hf:doc:metadata" content={JSON.stringify(metadata)} >
</svelte:head>

<!--Copyright 2021 The HuggingFace Team. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.
-->

<h1 id="unispeechsat">UniSpeech-SAT</h1>

<h2 id="overview">Overview</h2>

The UniSpeech-SAT model was proposed in [UniSpeech-SAT: Universal Speech Representation Learning with Speaker Aware
Pre-Training](https://arxiv.org/abs/2110.05752) by Sanyuan Chen, Yu Wu, Chengyi Wang, Zhengyang Chen, Zhuo Chen,
Shujie Liu, Jian Wu, Yao Qian, Furu Wei, Jinyu Li, Xiangzhan Yu .

The abstract from the paper is the following:

*Self-supervised learning (SSL) is a long-standing goal for speech processing, since it utilizes large-scale unlabeled
data and avoids extensive human labeling. Recent years witness great successes in applying self-supervised learning in
speech recognition, while limited exploration was attempted in applying SSL for modeling speaker characteristics. In
this paper, we aim to improve the existing SSL framework for speaker representation learning. Two methods are
introduced for enhancing the unsupervised speaker information extraction. First, we apply the multi-task learning to
the current SSL framework, where we integrate the utterance-wise contrastive loss with the SSL objective function.
Second, for better speaker discrimination, we propose an utterance mixing strategy for data augmentation, where
additional overlapped utterances are created unsupervisely and incorporate during training. We integrate the proposed
methods into the HuBERT framework. Experiment results on SUPERB benchmark show that the proposed system achieves
state-of-the-art performance in universal representation learning, especially for speaker identification oriented
tasks. An ablation study is performed verifying the efficacy of each proposed method. Finally, we scale up training
dataset to 94 thousand hours public audio data and achieve further performance improvement in all SUPERB tasks.*

Tips:

- UniSpeechSat is a speech model that accepts a float array corresponding to the raw waveform of the speech signal.
  Please use [Wav2Vec2Processor](/docs/transformers/master/en/model_doc/wav2vec2#transformers.Wav2Vec2Processor) for the feature extraction.
- UniSpeechSat model can be fine-tuned using connectionist temporal classification (CTC) so the model output has to be
  decoded using [Wav2Vec2CTCTokenizer](/docs/transformers/master/en/model_doc/wav2vec2#transformers.Wav2Vec2CTCTokenizer).
- UniSpeechSat performs especially well on speaker verification, speaker identification, and speaker diarization tasks.

This model was contributed by [patrickvonplaten](https://huggingface.co/patrickvonplaten). The Authors' code can be
found [here](https://github.com/microsoft/UniSpeech/tree/main/UniSpeech-SAT).


<h2 id="transformers.UniSpeechSatConfig">UniSpeechSatConfig</h2>

<div class="docstring">

<docstring><name>class transformers.UniSpeechSatConfig</name><anchor>transformers.UniSpeechSatConfig</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/unispeech_sat/configuration_unispeech_sat.py#L29</source><parameters>[{"name": "vocab_size", "val": " = 32"}, {"name": "hidden_size", "val": " = 768"}, {"name": "num_hidden_layers", "val": " = 12"}, {"name": "num_attention_heads", "val": " = 12"}, {"name": "intermediate_size", "val": " = 3072"}, {"name": "hidden_act", "val": " = 'gelu'"}, {"name": "hidden_dropout", "val": " = 0.1"}, {"name": "activation_dropout", "val": " = 0.1"}, {"name": "attention_dropout", "val": " = 0.1"}, {"name": "feat_proj_dropout", "val": " = 0.0"}, {"name": "feat_quantizer_dropout", "val": " = 0.0"}, {"name": "final_dropout", "val": " = 0.1"}, {"name": "layerdrop", "val": " = 0.1"}, {"name": "initializer_range", "val": " = 0.02"}, {"name": "layer_norm_eps", "val": " = 1e-05"}, {"name": "feat_extract_norm", "val": " = 'group'"}, {"name": "feat_extract_activation", "val": " = 'gelu'"}, {"name": "conv_dim", "val": " = (512, 512, 512, 512, 512, 512, 512)"}, {"name": "conv_stride", "val": " = (5, 2, 2, 2, 2, 2, 2)"}, {"name": "conv_kernel", "val": " = (10, 3, 3, 3, 3, 2, 2)"}, {"name": "conv_bias", "val": " = False"}, {"name": "num_conv_pos_embeddings", "val": " = 128"}, {"name": "num_conv_pos_embedding_groups", "val": " = 16"}, {"name": "do_stable_layer_norm", "val": " = False"}, {"name": "apply_spec_augment", "val": " = True"}, {"name": "mask_time_prob", "val": " = 0.05"}, {"name": "mask_time_length", "val": " = 10"}, {"name": "mask_time_min_masks", "val": " = 2"}, {"name": "mask_feature_prob", "val": " = 0.0"}, {"name": "mask_feature_length", "val": " = 10"}, {"name": "mask_feature_min_masks", "val": " = 0"}, {"name": "num_codevectors_per_group", "val": " = 320"}, {"name": "num_codevector_groups", "val": " = 2"}, {"name": "contrastive_logits_temperature", "val": " = 0.1"}, {"name": "num_negatives", "val": " = 100"}, {"name": "codevector_dim", "val": " = 256"}, {"name": "proj_codevector_dim", "val": " = 256"}, {"name": "diversity_loss_weight", "val": " = 0.1"}, {"name": "ctc_loss_reduction", "val": " = 'mean'"}, {"name": "ctc_zero_infinity", "val": " = False"}, {"name": "use_weighted_layer_sum", "val": " = False"}, {"name": "classifier_proj_size", "val": " = 256"}, {"name": "pad_token_id", "val": " = 0"}, {"name": "bos_token_id", "val": " = 1"}, {"name": "eos_token_id", "val": " = 2"}, {"name": "num_clusters", "val": " = 504"}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **vocab_size** (`int`, _optional_, defaults to 32) --
  Vocabulary size of the UniSpeechSat model. Defines the number of different tokens that can be represented
  by the `inputs_ids` passed when calling [UniSpeechSatModel](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatModel). Vocabulary size of
  the model. Defines the different tokens that can be represented by the _inputs_ids_ passed to the forward
  method of [UniSpeechSatModel](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatModel).
- **hidden_size** (`int`, _optional_, defaults to 768) --
  Dimensionality of the encoder layers and the pooler layer.
- **num_hidden_layers** (`int`, _optional_, defaults to 12) --
  Number of hidden layers in the Transformer encoder.
- **num_attention_heads** (`int`, _optional_, defaults to 12) --
  Number of attention heads for each attention layer in the Transformer encoder.
- **intermediate_size** (`int`, _optional_, defaults to 3072) --
  Dimensionality of the "intermediate" (i.e., feed-forward) layer in the Transformer encoder.
- **hidden_act** (`str` or `function`, _optional_, defaults to `"gelu"`) --
  The non-linear activation function (function or string) in the encoder and pooler. If string,
  `"gelu"`, `"relu"`, `"selu"` and `"gelu_new"` are supported.
- **hidden_dropout** (`float`, _optional_, defaults to 0.1) --
  The dropout probability for all fully connected layers in the embeddings, encoder, and pooler.
- **attention_dropout** (`float`, _optional_, defaults to 0.1) --
  The dropout ratio for the attention probabilities.
- **final_dropout** (`float`, _optional_, defaults to 0.1) --
  The dropout probability for the final projection layer of [UniSpeechSatForCTC](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatForCTC).
- **initializer_range** (`float`, _optional_, defaults to 0.02) --
  The standard deviation of the truncated_normal_initializer for initializing all weight matrices.
- **layer_norm_eps** (`float`, _optional_, defaults to 1e-12) --
  The epsilon used by the layer normalization layers.
- **feat_extract_norm** (`str`, _optional_, defaults to `"group"`) --
  The norm to be applied to 1D convolutional layers in feature extractor. One of `"group"` for group
  normalization of only the first 1D convolutional layer or `"layer"` for layer normalization of all 1D
  convolutional layers.
- **feat_proj_dropout** (`float`, _optional_, defaults to 0.0) --
  The dropout probability for output of the feature extractor.
- **feat_extract_activation** (`str, `optional`, defaults to `"gelu"`) --
  The non-linear activation function (function or string) in the 1D convolutional layers of the feature
  extractor. If string, `"gelu"`, `"relu"`, `"selu"` and `"gelu_new"` are supported.
- **feat_quantizer_dropout** (obj --_float_, _optional_, defaults to 0.0):
  The dropout probabilitiy for quantized feature extractor states.
- **conv_dim** (`Tuple[int]`, _optional_, defaults to `(512, 512, 512, 512, 512, 512, 512)`) --
  A tuple of integers defining the number of input and output channels of each 1D convolutional layer in the
  feature extractor. The length of _conv_dim_ defines the number of 1D convolutional layers.
- **conv_stride** (`Tuple[int]`, _optional_, defaults to `(5, 2, 2, 2, 2, 2, 2)`) --
  A tuple of integers defining the stride of each 1D convolutional layer in the feature extractor. The length
  of _conv_stride_ defines the number of convolutional layers and has to match the the length of _conv_dim_.
- **conv_kernel** (`Tuple[int]`, _optional_, defaults to `(10, 3, 3, 3, 3, 3, 3)`) --
  A tuple of integers defining the kernel size of each 1D convolutional layer in the feature extractor. The
  length of _conv_kernel_ defines the number of convolutional layers and has to match the the length of
  _conv_dim_.
- **conv_bias** (`bool`, _optional_, defaults to `False`) --
  Whether the 1D convolutional layers have a bias.
- **num_conv_pos_embeddings** (`int`, _optional_, defaults to 128) --
  Number of convolutional positional embeddings. Defines the kernel size of 1D convolutional positional
  embeddings layer.
- **num_conv_pos_embedding_groups** (`int`, _optional_, defaults to 16) --
  Number of groups of 1D convolutional positional embeddings layer.
- **do_stable_layer_norm** (`bool`, _optional_, defaults to `False`) --
  Whether to apply _stable_ layer norm architecture of the Transformer encoder. `do_stable_layer_norm is True` corresponds to applying layer norm before the attention layer, whereas `do_stable_layer_norm is False` corresponds to applying layer norm after the attention layer.
- **apply_spec_augment** (`bool`, _optional_, defaults to `True`) --
  Whether to apply *SpecAugment* data augmentation to the outputs of the feature extractor. For reference see
  [SpecAugment: A Simple Data Augmentation Method for Automatic Speech Recognition](https://arxiv.org/abs/1904.08779).
- **mask_time_prob** (`float`, _optional_, defaults to 0.05) --
  Percentage (between 0 and 1) of all feature vectors along the time axis which will be masked. The masking
  procecure generates ''mask_time_prob*len(time_axis)/mask_time_length'' independent masks over the axis. If
  reasoning from the propability of each feature vector to be chosen as the start of the vector span to be
  masked, _mask_time_prob_ should be `prob_vector_start*mask_time_length`. Note that overlap may decrease
  the actual percentage of masked vectors. This is only relevant if `apply_spec_augment is True`.
- **mask_time_length** (`int`, _optional_, defaults to 10) --
  Length of vector span along the time axis.
- **mask_time_min_masks** (`int`, _optional_, defaults to 2), --
  The minimum number of masks of length `mask_feature_length` generated along the time axis, each time
  step, irrespectively of `mask_feature_prob`. Only relevant if
  ''mask_time_prob*len(time_axis)/mask_time_length &amp;lt; mask_time_min_masks''
- **mask_feature_prob** (`float`, _optional_, defaults to 0.0) --
  Percentage (between 0 and 1) of all feature vectors along the feature axis which will be masked. The
  masking procecure generates ''mask_feature_prob*len(feature_axis)/mask_time_length'' independent masks over
  the axis. If reasoning from the propability of each feature vector to be chosen as the start of the vector
  span to be masked, _mask_feature_prob_ should be `prob_vector_start*mask_feature_length`. Note that
  overlap may decrease the actual percentage of masked vectors. This is only relevant if `apply_spec_augment is True`.
- **mask_feature_length** (`int`, _optional_, defaults to 10) --
  Length of vector span along the feature axis.
- **mask_feature_min_masks** (`int`, _optional_, defaults to 0), --
  The minimum number of masks of length `mask_feature_length` generated along the feature axis, each time
  step, irrespectively of `mask_feature_prob`. Only relevant if
  ''mask_feature_prob*len(feature_axis)/mask_feature_length &amp;lt; mask_feature_min_masks''
- **num_codevectors_per_group** (`int`, _optional_, defaults to 320) --
  Number of entries in each quantization codebook (group).
- **num_codevector_groups** (`int`, _optional_, defaults to 2) --
  Number of codevector groups for product codevector quantization.
- **contrastive_logits_temperature** (`float`, _optional_, defaults to 0.1) --
  The temperature _kappa_ in the contrastive loss.
- **feat_quantizer_dropout** (`float`, _optional_, defaults to 0.0) --
  The dropout probabilitiy for the output of the feature extractor that's used by the quantizer.
- **num_negatives** (`int`, _optional_, defaults to 100) --
  Number of negative samples for the contrastive loss.
- **codevector_dim** (`int`, _optional_, defaults to 256) --
  Dimensionality of the quantized feature vectors.
- **proj_codevector_dim** (`int`, _optional_, defaults to 256) --
  Dimensionality of the final projection of both the quantized and the transformer features.
- **diversity_loss_weight** (`int`, _optional_, defaults to 0.1) --
  The weight of the codebook diversity loss component.
- **ctc_loss_reduction** (`str`, _optional_, defaults to `"mean"`) --
  Specifies the reduction to apply to the output of `torch.nn.CTCLoss`. Only relevant when training an
  instance of [UniSpeechSatForCTC](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatForCTC).
- **ctc_zero_infinity** (`bool`, _optional_, defaults to `False`) --
  Whether to zero infinite losses and the associated gradients of `torch.nn.CTCLoss`. Infinite losses
  mainly occur when the inputs are too short to be aligned to the targets. Only relevant when training an
  instance of [UniSpeechSatForCTC](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatForCTC).
- **use_weighted_layer_sum** (`bool`, _optional_, defaults to `False`) --
  Whether to use a weighted average of layer outputs with learned weights. Only relevant when using an
  instance of [UniSpeechSatForSequenceClassification](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatForSequenceClassification).
- **classifier_proj_size** (`int`, _optional_, defaults to 256) --
  Dimensionality of the projection before token mean-pooling for classification.</paramsdesc><paramgroups>0</paramgroups></docstring>

This is the configuration class to store the configuration of a [UniSpeechSatModel](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatModel). It is
used to instantiate an UniSpeechSat model according to the specified arguments, defining the model architecture.
Instantiating a configuration with the defaults will yield a similar configuration to that of the UniSpeechSat
[facebook/unispeech_sat-base-960h](https://huggingface.co/facebook/unispeech_sat-base-960h) architecture.

Configuration objects inherit from [PretrainedConfig](/docs/transformers/master/en/main_classes/configuration#transformers.PretrainedConfig) and can be used to control the model
outputs. Read the documentation from [PretrainedConfig](/docs/transformers/master/en/main_classes/configuration#transformers.PretrainedConfig) for more information.




Example:

```python
>>> from transformers import UniSpeechSatModel, UniSpeechSatConfig

>>> # Initializing a UniSpeechSat facebook/unispeech_sat-base-960h style configuration
>>> configuration = UniSpeechSatConfig()

>>> # Initializing a model from the facebook/unispeech_sat-base-960h style configuration
>>> model = UniSpeechSatModel(configuration)

>>> # Accessing the model configuration
>>> configuration = model.config
```


</div>

<h2 id="transformers.models.unispeech_sat.modeling_unispeech_sat.UniSpeechSatBaseModelOutput">UniSpeechSat specific outputs</h2>

<div class="docstring">

<docstring><name>class transformers.models.unispeech\_sat.modeling\_unispeech\_sat.UniSpeechSatBaseModelOutput</name><anchor>transformers.models.unispeech_sat.modeling_unispeech_sat.UniSpeechSatBaseModelOutput</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/unispeech_sat/modeling_unispeech_sat.py#L60</source><parameters>[{"name": "last_hidden_state", "val": ": FloatTensor = None"}, {"name": "extract_features", "val": ": FloatTensor = None"}, {"name": "hidden_states", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}]</parameters><paramsdesc>- **last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`) --
  Sequence of hidden-states at the output of the last layer of the model.
- **extract_features** (`torch.FloatTensor` of shape `(batch_size, sequence_length, conv_dim[-1])`) --
  Sequence of extracted feature vectors of the last convolutional layer of the model.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</paramsdesc><paramgroups>0</paramgroups></docstring>

Output type of `UniSpeechSatBaseModelOutput`, with potential hidden states and attentions.




</div>

<div class="docstring">

<docstring><name>class transformers.models.unispeech\_sat.modeling\_unispeech\_sat.UniSpeechSatForPreTrainingOutput</name><anchor>transformers.models.unispeech_sat.modeling_unispeech_sat.UniSpeechSatForPreTrainingOutput</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/unispeech_sat/modeling_unispeech_sat.py#L89</source><parameters>[{"name": "loss", "val": ": typing.Optional[torch.FloatTensor] = None"}, {"name": "logits", "val": ": FloatTensor = None"}, {"name": "projected_states", "val": ": FloatTensor = None"}, {"name": "projected_quantized_states", "val": ": FloatTensor = None"}, {"name": "codevector_perplexity", "val": ": FloatTensor = None"}, {"name": "hidden_states", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}]</parameters><paramsdesc>- **loss** (_optional_, returned when model is in train mode, `torch.FloatTensor` of shape `(1,)`) --
  Total loss as the sum of the contrastive loss (L_m) and the diversity loss (L_d) as stated in the [official
  paper](https://arxiv.org/pdf/2006.11477.pdf) . (classification) loss.
- **projected_states** (`torch.FloatTensor` of shape `(batch_size, sequence_length, config.proj_codevector_dim)`) --
  Hidden-states of the model projected to _config.proj_codevector_dim_ that can be used to predict the masked
  projected quantized states.
- **projected_quantized_states** (`torch.FloatTensor` of shape `(batch_size, sequence_length, config.proj_codevector_dim)`) --
  Quantized extracted feature vectors projected to _config.proj_codevector_dim_ representing the positive
  target vectors for contrastive loss.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</paramsdesc><paramgroups>0</paramgroups></docstring>

Output type of `UniSpeechSatForPreTrainingOutput`, with potential hidden states and
attentions.




</div>

<h2 id="transformers.UniSpeechSatModel">UniSpeechSatModel</h2>

<div class="docstring">

<docstring><name>class transformers.UniSpeechSatModel</name><anchor>transformers.UniSpeechSatModel</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/unispeech_sat/modeling_unispeech_sat.py#L1047</source><parameters>[{"name": "config", "val": ": UniSpeechSatConfig"}]</parameters><paramsdesc>- **config** ([UniSpeechSatConfig](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.</paramsdesc><paramgroups>0</paramgroups></docstring>
The bare UniSpeechSat Model transformer outputting raw hidden-states without any specific head on top.
UniSpeechSat was proposed in [wav2vec 2.0: A Framework for Self-Supervised Learning of Speech Representations](https://arxiv.org/abs/2006.11477) by Alexei Baevski, Henry Zhou, Abdelrahman Mohamed, Michael Auli.

This model inherits from [PreTrainedModel](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel). Check the superclass documentation for the generic
methods the library implements for all its model (such as downloading or saving etc.).

This model is a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) sub-class. Use
it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to general usage and
behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.UniSpeechSatModel.forward</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/unispeech_sat/modeling_unispeech_sat.py#L1111</source><parameters>[{"name": "input_values", "val": ""}, {"name": "attention_mask", "val": " = None"}, {"name": "mask_time_indices", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}]</parameters><paramsdesc>- **input_values** (`torch.FloatTensor` of shape `(batch_size, sequence_length)`) --
  Float values of input raw speech waveform. Values can be obtained by loading a _.flac_ or _.wav_ audio file
  into an array of type _List[float]_ or a _numpy.ndarray_, *e.g.* via the soundfile library (_pip install
  soundfile_). To prepare the array into _input_values_, the `UniSpeechSatProcessor`
  should be used for padding and conversion into a tensor of type _torch.FloatTensor_. See
  `transformers.UniSpeechSatProcessor.__call__` for details.
- **attention_mask** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing convolution and attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary#attention-mask)

<Tip warning={true}>

`attention_mask` should only be passed if the corresponding processor has
`config.return_attention_mask == True`. For all models whose processor has
`config.return_attention_mask == False`, such as [unispeech_sat-base](https://huggingface.co/facebook/unispeech_sat-base-960h), `attention_mask` should **not** be
passed to avoid degraded performance when doing batched inference. For such models `input_values`
should simply be padded with 0 and passed without `attention_mask`. Be aware that these models
also yield slightly different results depending on whether `input_values` is padded or not.

</Tip>

- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/master/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.</paramsdesc><paramgroups>0</paramgroups><rettype>[UniSpeechSatBaseModelOutput](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.models.unispeech_sat.modeling_unispeech_sat.UniSpeechSatBaseModelOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [UniSpeechSatBaseModelOutput](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.models.unispeech_sat.modeling_unispeech_sat.UniSpeechSatBaseModelOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([UniSpeechSatConfig](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatConfig)) and inputs.

- **last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`) -- Sequence of hidden-states at the output of the last layer of the model.
- **extract_features** (`torch.FloatTensor` of shape `(batch_size, sequence_length, conv_dim[-1])`) -- Sequence of extracted feature vectors of the last convolutional layer of the model.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</retdesc></docstring>
The [UniSpeechSatModel](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatModel) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>







Example:

```python
>>> from transformers import Wav2Vec2Processor, UniSpeechSatModel
>>> from datasets import load_dataset

>>> dataset = load_dataset("hf-internal-testing/librispeech_asr_demo", "clean", split="validation")
>>> sampling_rate = dataset.features["audio"].sampling_rate

>>> processor = Wav2Vec2Processor.from_pretrained('microsoft/unispeech-sat-base-plus')
>>> model = UniSpeechSatModel.from_pretrained('microsoft/unispeech-sat-base-plus')

>>> # audio file is decoded on the fly
>>> inputs = processor(dataset[0]["audio"]["array"], sampling_rate=sampling_rate, return_tensors="pt")
>>> outputs = model(**inputs)

>>> last_hidden_states = outputs.last_hidden_state
```


</div></div>

<h2 id="transformers.UniSpeechSatForCTC">UniSpeechSatForCTC</h2>

<div class="docstring">

<docstring><name>class transformers.UniSpeechSatForCTC</name><anchor>transformers.UniSpeechSatForCTC</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/unispeech_sat/modeling_unispeech_sat.py#L1330</source><parameters>[{"name": "config", "val": ""}]</parameters><paramsdesc>- **config** ([UniSpeechSatConfig](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.</paramsdesc><paramgroups>0</paramgroups></docstring>
UniSpeechSat Model with a _language modeling_ head on top for Connectionist Temporal Classification (CTC). 
UniSpeechSat was proposed in [wav2vec 2.0: A Framework for Self-Supervised Learning of Speech Representations](https://arxiv.org/abs/2006.11477) by Alexei Baevski, Henry Zhou, Abdelrahman Mohamed, Michael Auli.

This model inherits from [PreTrainedModel](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel). Check the superclass documentation for the generic
methods the library implements for all its model (such as downloading or saving etc.).

This model is a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) sub-class. Use
it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to general usage and
behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.UniSpeechSatForCTC.forward</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/unispeech_sat/modeling_unispeech_sat.py#L1356</source><parameters>[{"name": "input_values", "val": ""}, {"name": "attention_mask", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}, {"name": "labels", "val": " = None"}]</parameters><paramsdesc>- **input_values** (`torch.FloatTensor` of shape `(batch_size, sequence_length)`) --
  Float values of input raw speech waveform. Values can be obtained by loading a _.flac_ or _.wav_ audio file
  into an array of type _List[float]_ or a _numpy.ndarray_, *e.g.* via the soundfile library (_pip install
  soundfile_). To prepare the array into _input_values_, the `UniSpeechSatProcessor`
  should be used for padding and conversion into a tensor of type _torch.FloatTensor_. See
  `transformers.UniSpeechSatProcessor.__call__` for details.
- **attention_mask** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing convolution and attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary#attention-mask)

<Tip warning={true}>

`attention_mask` should only be passed if the corresponding processor has
`config.return_attention_mask == True`. For all models whose processor has
`config.return_attention_mask == False`, such as [unispeech_sat-base](https://huggingface.co/facebook/unispeech_sat-base-960h), `attention_mask` should **not** be
passed to avoid degraded performance when doing batched inference. For such models `input_values`
should simply be padded with 0 and passed without `attention_mask`. Be aware that these models
also yield slightly different results depending on whether `input_values` is padded or not.

</Tip>

- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/master/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.

- **labels** (`torch.LongTensor` of shape `(batch_size, target_length)`, _optional_) --
  Labels for connectionist temporal classification. Note that `target_length` has to be smaller or equal to
  the sequence length of the output logits. Indices are selected in `[-100, 0, ..., config.vocab_size - 1]`. All labels set to `-100` are ignored (masked), the loss is only computed for labels in `[0, ..., config.vocab_size - 1]`.</paramsdesc><paramgroups>0</paramgroups><rettype>[CausalLMOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.CausalLMOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [CausalLMOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.CausalLMOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([UniSpeechSatConfig](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatConfig)) and inputs.

- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` is provided) -- Language modeling loss (for next-token prediction).
- **logits** (`torch.FloatTensor` of shape `(batch_size, sequence_length, config.vocab_size)`) -- Prediction scores of the language modeling head (scores for each vocabulary token before SoftMax).
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</retdesc></docstring>
The [UniSpeechSatForCTC](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatForCTC) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>







Example:

```python
>>> from transformers import Wav2Vec2Processor, UniSpeechSatForCTC
>>> from datasets import load_dataset
>>> import torch

>>> dataset = load_dataset("hf-internal-testing/librispeech_asr_demo", "clean", split="validation")
>>> sampling_rate = dataset.features["audio"].sampling_rate

>>> processor = Wav2Vec2Processor.from_pretrained('microsoft/unispeech-sat-base-plus')
>>> model = UniSpeechSatForCTC.from_pretrained('microsoft/unispeech-sat-base-plus')

>>> # audio file is decoded on the fly
>>> inputs = processor(dataset[0]["audio"]["array"], sampling_rate=sampling_rate, return_tensors="pt")
>>> logits = model(**inputs).logits
>>> predicted_ids = torch.argmax(logits, dim=-1)

>>> # transcribe speech
>>> transcription = processor.batch_decode(predicted_ids)

>>> # compute loss
>>> with processor.as_target_processor():
...     inputs["labels"] = processor(dataset[0]["text"], return_tensors="pt").input_ids

>>> loss = model(**inputs).loss
```


</div></div>

<h2 id="transformers.UniSpeechSatForSequenceClassification">UniSpeechSatForSequenceClassification</h2>

<div class="docstring">

<docstring><name>class transformers.UniSpeechSatForSequenceClassification</name><anchor>transformers.UniSpeechSatForSequenceClassification</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/unispeech_sat/modeling_unispeech_sat.py#L1444</source><parameters>[{"name": "config", "val": ""}]</parameters><paramsdesc>- **config** ([UniSpeechSatConfig](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.</paramsdesc><paramgroups>0</paramgroups></docstring>

UniSpeechSat Model with a sequence classification head on top (a linear layer over the pooled output) for tasks
like SUPERB Keyword Spotting.

UniSpeechSat was proposed in [wav2vec 2.0: A Framework for Self-Supervised Learning of Speech Representations](https://arxiv.org/abs/2006.11477) by Alexei Baevski, Henry Zhou, Abdelrahman Mohamed, Michael Auli.

This model inherits from [PreTrainedModel](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel). Check the superclass documentation for the generic
methods the library implements for all its model (such as downloading or saving etc.).

This model is a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) sub-class. Use
it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to general usage and
behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.UniSpeechSatForSequenceClassification.forward</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/unispeech_sat/modeling_unispeech_sat.py#L1473</source><parameters>[{"name": "input_values", "val": ""}, {"name": "attention_mask", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}, {"name": "labels", "val": " = None"}]</parameters><paramsdesc>- **input_values** (`torch.FloatTensor` of shape `(batch_size, sequence_length)`) --
  Float values of input raw speech waveform. Values can be obtained by loading a _.flac_ or _.wav_ audio file
  into an array of type _List[float]_ or a _numpy.ndarray_, *e.g.* via the soundfile library (_pip install
  soundfile_). To prepare the array into _input_values_, the `UniSpeechSatProcessor`
  should be used for padding and conversion into a tensor of type _torch.FloatTensor_. See
  `transformers.UniSpeechSatProcessor.__call__` for details.
- **attention_mask** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing convolution and attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary#attention-mask)

<Tip warning={true}>

`attention_mask` should only be passed if the corresponding processor has
`config.return_attention_mask == True`. For all models whose processor has
`config.return_attention_mask == False`, such as [unispeech_sat-base](https://huggingface.co/facebook/unispeech_sat-base-960h), `attention_mask` should **not** be
passed to avoid degraded performance when doing batched inference. For such models `input_values`
should simply be padded with 0 and passed without `attention_mask`. Be aware that these models
also yield slightly different results depending on whether `input_values` is padded or not.

</Tip>

- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/master/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.

- **labels** (`torch.LongTensor` of shape `(batch_size,)`, _optional_) --
  Labels for computing the sequence classification/regression loss. Indices should be in `[0, ..., config.num_labels - 1]`. If `config.num_labels == 1` a regression loss is computed (Mean-Square loss),
  If `config.num_labels > 1` a classification loss is computed (Cross-Entropy).</paramsdesc><paramgroups>0</paramgroups><rettype>[SequenceClassifierOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.SequenceClassifierOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [SequenceClassifierOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.SequenceClassifierOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([UniSpeechSatConfig](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatConfig)) and inputs.

- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` is provided) -- Classification (or regression if config.num_labels==1) loss.
- **logits** (`torch.FloatTensor` of shape `(batch_size, config.num_labels)`) -- Classification (or regression if config.num_labels==1) scores (before SoftMax).
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</retdesc></docstring>
The [UniSpeechSatForSequenceClassification](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatForSequenceClassification) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>







Example:

```python
>>> from transformers import Wav2Vec2FeatureExtractor, UniSpeechSatForSequenceClassification
>>> from datasets import load_dataset
>>> import torch

>>> dataset = load_dataset("hf-internal-testing/librispeech_asr_demo", "clean", split="validation")
>>> sampling_rate = dataset.features["audio"].sampling_rate

>>> feature_extractor = Wav2Vec2FeatureExtractor.from_pretrained('microsoft/unispeech-sat-base-plus')
>>> model = UniSpeechSatForSequenceClassification.from_pretrained('microsoft/unispeech-sat-base-plus')

>>> # audio file is decoded on the fly
>>> inputs = feature_extractor(dataset[0]["audio"]["array"], return_tensors="pt")
>>> logits = model(**inputs).logits
>>> predicted_class_ids = torch.argmax(logits, dim=-1)
>>> predicted_label = model.config.id2label[predicted_class_ids]

>>> # compute loss - target_label is e.g. "down"
>>> target_label = model.config.id2label[0]
>>> inputs["labels"] = torch.tensor([model.config.label2id[target_label]])
>>> loss = model(**inputs).loss
```


</div></div>

<h2 id="transformers.UniSpeechSatForPreTraining">UniSpeechSatForPreTraining</h2>

<div class="docstring">

<docstring><name>class transformers.UniSpeechSatForPreTraining</name><anchor>transformers.UniSpeechSatForPreTraining</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/unispeech_sat/modeling_unispeech_sat.py#L1168</source><parameters>[{"name": "config", "val": ": UniSpeechSatConfig"}]</parameters><paramsdesc>- **config** ([UniSpeechSatConfig](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.</paramsdesc><paramgroups>0</paramgroups></docstring>
UniSpeechSat Model with a quantizer and _VQ_ head on top. 
UniSpeechSat was proposed in [wav2vec 2.0: A Framework for Self-Supervised Learning of Speech Representations](https://arxiv.org/abs/2006.11477) by Alexei Baevski, Henry Zhou, Abdelrahman Mohamed, Michael Auli.

This model inherits from [PreTrainedModel](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel). Check the superclass documentation for the generic
methods the library implements for all its model (such as downloading or saving etc.).

This model is a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) sub-class. Use
it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to general usage and
behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.UniSpeechSatForPreTraining.forward</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/unispeech_sat/modeling_unispeech_sat.py#L1224</source><parameters>[{"name": "input_values", "val": ""}, {"name": "attention_mask", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}]</parameters><paramsdesc>- **input_values** (`torch.FloatTensor` of shape `(batch_size, sequence_length)`) --
  Float values of input raw speech waveform. Values can be obtained by loading a _.flac_ or _.wav_ audio file
  into an array of type _List[float]_ or a _numpy.ndarray_, *e.g.* via the soundfile library (_pip install
  soundfile_). To prepare the array into _input_values_, the `UniSpeechSatProcessor`
  should be used for padding and conversion into a tensor of type _torch.FloatTensor_. See
  `transformers.UniSpeechSatProcessor.__call__` for details.
- **attention_mask** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing convolution and attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary#attention-mask)

<Tip warning={true}>

`attention_mask` should only be passed if the corresponding processor has
`config.return_attention_mask == True`. For all models whose processor has
`config.return_attention_mask == False`, such as [unispeech_sat-base](https://huggingface.co/facebook/unispeech_sat-base-960h), `attention_mask` should **not** be
passed to avoid degraded performance when doing batched inference. For such models `input_values`
should simply be padded with 0 and passed without `attention_mask`. Be aware that these models
also yield slightly different results depending on whether `input_values` is padded or not.

</Tip>

- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/master/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.</paramsdesc><paramgroups>0</paramgroups><rettype>[UniSpeechSatForPreTrainingOutput](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.models.unispeech_sat.modeling_unispeech_sat.UniSpeechSatForPreTrainingOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [UniSpeechSatForPreTrainingOutput](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.models.unispeech_sat.modeling_unispeech_sat.UniSpeechSatForPreTrainingOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([UniSpeechSatConfig](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatConfig)) and inputs.

- **loss** (_optional_, returned when model is in train mode, `torch.FloatTensor` of shape `(1,)`) -- Total loss as the sum of the contrastive loss (L_m) and the diversity loss (L_d) as stated in the [official
  paper](https://arxiv.org/pdf/2006.11477.pdf) . (classification) loss.
- **projected_states** (`torch.FloatTensor` of shape `(batch_size, sequence_length, config.proj_codevector_dim)`) -- Hidden-states of the model projected to _config.proj_codevector_dim_ that can be used to predict the masked
  projected quantized states.
- **projected_quantized_states** (`torch.FloatTensor` of shape `(batch_size, sequence_length, config.proj_codevector_dim)`) -- Quantized extracted feature vectors projected to _config.proj_codevector_dim_ representing the positive
  target vectors for contrastive loss.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</retdesc></docstring>
The [UniSpeechSatForPreTraining](/docs/transformers/master/en/model_doc/unispeech_sat#transformers.UniSpeechSatForPreTraining) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>



Example:

```python
>>> import torch
>>> from transformers import UniSpeechSatFeatureExtractor, UniSpeechSatForPreTraining
>>> from transformers.models.unispeech_sat.modeling_unispeech_sat import _compute_mask_indices
>>> from datasets import load_dataset
>>> import soundfile as sf

>>> feature_extractor = UniSpeechSatFeatureExtractor.from_pretrained("patrickvonplaten/unispeech_sat-base")
>>> model = UniSpeechSatForPreTraining.from_pretrained("patrickvonplaten/unispeech_sat-base")


>>> def map_to_array(batch):
...     speech, _ = sf.read(batch["file"])
...     batch["speech"] = speech
...     return batch


>>> ds = load_dataset("patrickvonplaten/librispeech_asr_dummy", "clean", split="validation")
>>> ds = ds.map(map_to_array)

>>> input_values = feature_extractor(ds["speech"][0], return_tensors="pt").input_values  # Batch size 1

>>> # compute masked indices
>>> batch_size, raw_sequence_length = input_values.shape
>>> sequence_length = model._get_feat_extract_output_lengths(raw_sequence_length)
>>> mask_time_indices = _compute_mask_indices((batch_size, sequence_length), mask_prob=0.2, mask_length=2, device=model.device)

>>> with torch.no_grad():
...     outputs = model(input_values, mask_time_indices=mask_time_indices)

>>> # compute cosine similarity between predicted (=projected_states) and target (=projected_quantized_states)
>>> cosine_sim = torch.cosine_similarity(
...     outputs.projected_states, outputs.projected_quantized_states, dim=-1
... )

>>> # show that cosine similarity is much higher than random
>>> assert cosine_sim[mask_time_indices].mean() > 0.5

>>> # for contrastive loss training model should be put into train mode
>>> model.train()
>>> loss = model(input_values, mask_time_indices=mask_time_indices).loss
```






</div></div>
